--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Compress==1.8.0
 future==0.18.2
 gunicorn==20.0.4
 heroku==0.1.4
+heroku3==4.2.3
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -19,7 +20,7 @@ MarkupSafe==1.1.1
 numpy==1.19.4
 pandas==1.1.4
 plotly==4.12.0
-python-dateutil==1.5
+python-dateutil==2.8.1
 pytz==2020.4
 requests==2.25.0
 retrying==1.3.3
