--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,83 @@
+appdirs==1.4.4
+appnope==0.1.0
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.2.0
+backcall==0.2.0
+bleach==3.2.1
 Brotli==1.0.9
-certifi==2020.11.8
+certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
 dash==1.17.0
+dash-bootstrap-components==0.10.7
 dash-core-components==1.13.0
 dash-html-components==1.1.1
 dash-renderer==1.8.3
 dash-table==4.11.0
+DateTime==4.3
+decorator==4.4.2
+defusedxml==0.6.0
+distlib==0.3.1
+entrypoints==0.3
+filelock==3.0.12
 Flask==1.1.2
 Flask-Compress==1.8.0
 future==0.18.2
-gunicorn==20.0.4
-heroku==0.1.4
-heroku3==4.2.3
 idna==2.10
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.17.2
 Jinja2==2.11.2
+json5==0.9.5
+jsonify==0.5
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+jupyterlab==2.2.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==1.2.0
 MarkupSafe==1.1.1
-numpy==1.19.4
-pandas==1.1.4
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.2
+notebook==6.1.4
+numpy==1.19.3
+packaging==20.4
+pandas==1.1.3
+pandocfilters==1.4.3
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
 plotly==4.12.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.8
+ptyprocess==0.6.0
+pycparser==2.20
+Pygments==2.7.2
+pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
-pytz==2020.4
-requests==2.25.0
+pytz==2020.1
+pyzmq==19.0.2
+requests==2.24.0
 retrying==1.3.3
+Send2Trash==1.5.0
 six==1.15.0
-urllib3==1.26.2
+SQLAlchemy==1.3.20
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+tornado==6.0.4
+traitlets==5.0.5
+urllib3==1.25.11
+virtualenv==20.1.0
+wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==1.0.1
+zope.interface==5.1.2
