--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
 tornado==6.0.4
-traitlets==5.0.5
+traitlets
 urllib3==1.25.11
 virtualenv==20.1.0
 wcwidth==0.2.5
