--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ testpath==0.4.4
 tornado==6.0.4
 traitlets
 urllib3==1.25.11
-virtualenv==20.1.0
+virtualenv
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
